DuPont DevSB/src/objects/ERP_Customer__c.object
<CustomObject>
    <fields>
        <fullName>Account_Group_Code__c</fullName>
        <description>The account group is a classifying feature within customer master records. The account group determines in which number range the customer account number should be; whether the number is assigned by the user or by the system; which specifications are necessary or possible in the master record.</description>
        <label>Account Group Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Group__c</fullName>
        <description>The account group is a classifying feature within customer master records. The account group determines in which number range the customer account number should be; whether the number is assigned by the user or by the system; which specifications are necessary or possible in the master record.</description>
        <label>Account Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Block__c</fullName>
        <description>Indicates if further billing is blocked for the customer.</description>
        <label>Billing Block</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>The city of this customer as stored in SAP.</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>The country of this customer as stored in SAP.</description>
        <label>Country Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>The country of this customer as stored in SAP.</description>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Block__c</fullName>
        <description>Indicates if further credit processing is blocked for the customer.</description>
        <label>Credit Block</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <description>Customer&apos;s currency for a sales area. This currency will be used to settle the customer&apos;s charges for the given sales organization.</description>
        <label>Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <description>Key with which the customer can be identified within the SAP system.Gives an alphanumeric key, which clearly identifies the customer or vendor in the SAP system.</description>
        <label>Customer Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_General_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the record that contains the SAP general data for this customer, which can be shared across sales orgs.</description>
        <label>Customer - General Data</label>
        <referenceTo>ERP_Customer__c</referenceTo>
        <relationshipLabel>ERP Customers</relationshipLabel>
        <relationshipName>ERP_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Group_1_Code__c</fullName>
        <description>Identifies a particular group of customers (for example, wholesale or retail).</description>
        <label>Customer Group 1 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group_1__c</fullName>
        <description>Identifies a particular group of customers (for example, wholesale or retail).</description>
        <label>Customer Group 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group_2_Code__c</fullName>
        <description>Identifies a particular group of customers (for example, wholesale or retail).</description>
        <label>Customer Group 2 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group_2__c</fullName>
        <description>Identifies a particular group of customers (for example, wholesale or retail).</description>
        <label>Customer Group 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group_3_Code__c</fullName>
        <description>Identifies a particular group of customers (for example, wholesale or retail).</description>
        <label>Customer Group 3 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group_3__c</fullName>
        <description>Identifies a particular group of customers (for example, wholesale or retail).</description>
        <label>Customer Group 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name_2__c</fullName>
        <description>Alternative name of the customer or an addition to the name of the customer</description>
        <label>Customer Name 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Order_Block_Code__c</fullName>
        <description>Indicates if further sales order processing is blocked for the customer. The block applies throughout the specified sales area.</description>
        <label>Customer Order Block Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Order_Block__c</fullName>
        <description>Indicates if further sales order processing is blocked for the customer. The block applies throughout the specified sales area.</description>
        <label>Customer Order Block</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Price_Group_Code__c</fullName>
        <description>A grouping of pricing conditions that you can apply to customers who share similar pricing requirements.</description>
        <label>Customer Price Group Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Price_Group__c</fullName>
        <description>A grouping of pricing conditions that you can apply to customers who share similar pricing requirements.</description>
        <label>Customer Price Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <description>To give customer status based on the deletion and block fields</description>
        <formula>IF(fDeletion_Flag_General__c || Deletion_Flag__c ||Deletion_Flag_Company_Code__c, &quot;MFD&quot;, &quot;&quot;) &amp;
 IF(NOT(ISBLANK(Posting_Block_General__c)), &quot; PBG&quot;, &quot;&quot;)  &amp; 
 IF(NOT(ISBLANK(Posting_Block__c)),  &quot; PB&quot;, &quot;&quot;)&amp; 
 IF(NOT(ISBLANK(Sales_Order_Block__c )),  &quot; SOB&quot;, &quot;&quot;)&amp; 
 IF(NOT(ISBLANK(Delivery_Block__c)),  &quot; DB&quot;, &quot;&quot;)&amp; 
 IF(NOT(ISBLANK(Billing_Block__c)),  &quot; BB&quot;, &quot;&quot;)</formula>
        <label>Customer Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_business_license_Reg_number__c</fullName>
        <label>Customer business license/Reg number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <description>The Data Universal Numbering System or D-U-N-S® Number is D&amp;B&apos;s copyrighted, proprietary means of identifying business entities on a location-specific basis. This unique nine-digit sequence provided by D&amp;B recognized as the universal standard for identifying and keeping track of a company</description>
        <label>DUNS Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deletion_Flag_Company_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the deletion flag status of the associated Company Record.</description>
        <label>Deletion Flag - Company Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deletion_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates in the future this record is to be deleted or not, however they are not physically deleted yet for history maintenance purposes. This deletion applies in the specified sales area only.</description>
        <label>Deletion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Block__c</fullName>
        <description>Indicates if further delivery is blocked for the customer.</description>
        <label>Delivery Block</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel_Code__c</fullName>
        <description>The way in which products or services reach the customer. Typical examples of distribution channels are wholesale, retail, or direct sales.</description>
        <label>Dist. Channel Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <description>The way in which products or services reach the customer. Typical examples of distribution channels are wholesale, retail, or direct sales.</description>
        <label>Dist. Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Code__c</fullName>
        <description>A way of grouping materials, products, or services. The system uses divisions to determine the sales areas and business areas to which a material, product, or service belongs. A product or service is always assigned to just one division.</description>
        <label>Division Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>A way of grouping materials, products, or services. The system uses divisions to determine the sales areas and business areas to which a material, product, or service belongs. A product or service is always assigned to just one division.</description>
        <label>Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Account__c</fullName>
        <description>This Field has been created as a part of req.123</description>
        <label>ERP Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_YKPartnerCode__c</fullName>
        <description>This Field will capture Partner Function Code Value and will be updated by Workflow &quot;CS_UpdateERPCustomerYKPartnerCode&quot;.</description>
        <label>YK Partner Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_YKPartnerCount__c</fullName>
        <label>YK Partner Count</label>
        <summaryFilterItems>
            <field>ERP_Relationship__c.Partner_Function_Code__c</field>
            <operation>equals</operation>
            <value>YK</value>
        </summaryFilterItems>
        <summaryForeignKey>ERP_Relationship__c.ERP_Customer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>External_ERP_ID__c</fullName>
        <description>Combines the Source Cluster + Customer Code + Sales Org Code + Distribution Channel Code + Division Code to identify a unique record.</description>
        <externalId>true</externalId>
        <label>External ERP ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Group_key__c</fullName>
        <label>Group key</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_1_Code__c</fullName>
        <description>Commonly-used trading terms that comply with the standards established by the International Chamber of Commerce (ICC). Incoterms specify certain internationally recognized procedures that the shipper and the receiving party must follow for the shipping transaction to be successfully completed.</description>
        <label>Incoterms 1 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_1__c</fullName>
        <description>Commonly-used trading terms that comply with the standards established by the International Chamber of Commerce (ICC). Incoterms specify certain internationally recognized procedures that the shipper and the receiving party must follow for the shipping transaction to be successfully completed.</description>
        <label>Incoterms 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_2__c</fullName>
        <description>Commonly-used trading terms that comply with the standards established by the International Chamber of Commerce (ICC). Incoterms specify certain internationally recognized procedures that the shipper and the receiving party must follow for the shipping transaction to be successfully completed.</description>
        <label>Incoterms 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Code__c</fullName>
        <description>Language code for the customer from the ERP system.</description>
        <label>Language Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language for the customer from the ERP system.</description>
        <label>Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legal_Entity_Code__c</fullName>
        <description>Company Code to which the ERP Customer belongs to</description>
        <label>Legal Entity Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Organizational Group ( as ERP Sales Area ).</description>
        <label>Sales Area</label>
        <referenceTo>OrgGroup__c</referenceTo>
        <relationshipLabel>ERP Customers</relationshipLabel>
        <relationshipName>ERP_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Box__c</fullName>
        <description>The Post Office Box of this customer as stored in SAP.</description>
        <label>PO Box</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posting_Block_General__c</fullName>
        <description>Indicates if further general posting is blocked for the customer.</description>
        <label>Posting Block - General</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posting_Block__c</fullName>
        <description>Indicates if further posting is blocked for the customer.</description>
        <label>Posting Block</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List_Type_Code__c</fullName>
        <description>Identifies a price list or other pricing condition (for example, a surcharge or discount).</description>
        <label>Price List Type Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List_Type__c</fullName>
        <description>Identifies a price list or other pricing condition (for example, a surcharge or discount).</description>
        <label>Price List Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region of the ERP Customer</description>
        <label>Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <description>SBU or the business unit to which the ERP Customer belongs</description>
        <label>SBU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Block__c</fullName>
        <description>Indicates if further sales is blocked for the customer.</description>
        <label>Sales Block</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office_Code__c</fullName>
        <description>A physical location (for example, a branch office) that has responsibility for the sale of certain products or services within a given geographical area.</description>
        <label>Sales Office Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <description>A physical location (for example, a branch office) that has responsibility for the sale of certain products or services within a given geographical area.</description>
        <label>Sales Office</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Block__c</fullName>
        <description>Indicates if further sales order is blocked for the customer.</description>
        <label>Sales Order Block</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <description>An organizational unit responsible for the sale of certain products or services.</description>
        <label>Sales Org. Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <description>An organizational unit responsible for the sale of certain products or services.</description>
        <label>Sales Org.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Term__c</fullName>
        <description>Search term for the customer from the ERP system.  Example: &quot;IBM&quot;.</description>
        <label>Search Term</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Cluster__c</fullName>
        <description>Specific SAP box or cluster where the data of this record originates.</description>
        <label>Source Cluster</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>Geographical region this customer is located as stored in SAP.</description>
        <label>State/Province Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Geographical region this customer is located as stored in SAP.</description>
        <label>State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>The street of this customer as stored in SAP.</description>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <label>Tax Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payment_Code__c</fullName>
        <description>Key for defining payment terms composed of cash discount percentages and payment periods. It is used in sales orders, purchase orders, and invoices.</description>
        <label>Terms of Payment Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payment__c</fullName>
        <description>Key for defining payment terms composed of cash discount percentages and payment periods. It is used in sales orders, purchase orders, and invoices.</description>
        <label>Terms of Payment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Number__c</fullName>
        <label>VAT Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP_Postal_Code__c</fullName>
        <description>The ZIP or postal code of this customer as stored in SAP.</description>
        <label>ZIP/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fDeletion_Flag_General__c</fullName>
        <description>Indicates the deletion flag status of the associated Customer General Record. Hence the users will know that the customer is marked for deletion across all the sales orgs</description>
        <formula>Customer_General_Data__r.Deletion_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deletion Flag - General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fLanguage_Code_General__c</fullName>
        <description>Language Code from the related ERP Customer General record</description>
        <formula>Customer_General_Data__r.Language_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language Code (General)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fLanguage_General__c</fullName>
        <description>Language from the related ERP Customer General record</description>
        <formula>Customer_General_Data__r.Language__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language (General)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fSearch_Term_General__c</fullName>
        <description>Search term from the related ERP Customer General record</description>
        <formula>Customer_General_Data__r.Search_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Search Term (General)</label>
        <type>Text</type>
    </fields>
    <label>ERP Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ERP Customers</pluralLabel>
    <recordTypes>
        <fullName>ERP_Customer_Extended_Data</fullName>
        <active>true</active>
        <description>ERP Customer - Extended data (SAP Sales Area)</description>
        <label>ERP Customer - Extended Data</label>
    </recordTypes>
    <recordTypes>
        <fullName>ERP_Customer_General_Data</fullName>
        <active>true</active>
        <description>ERP Customer - General Data (SAP General Data)</description>
        <label>ERP Customer - General Data</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>